# OpenLecture

./: .gitignore  AI_CONTEXT.md  Ossessione.md  README.md  ROADMAP.md  TestAudio.md  pyproject.toml  requirements.txt  transcript.txt
.github/workflows/: ci.yml
openlecture/: audio_utils.py  cli.py  models.py  output_formatter.py  transcribe.py
openlecture.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: benchmark.py  setup_amd_windows.ps1
tests/: conftest.py  test_audio_utils.py  test_backends.py  test_cli.py  test_dml_fallback.py  test_output_formatter.py  test_progress.py
